--- a/diyaa.html
+++ b/diyaa.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <style>
+                body{width: 100%;height: 100%;}
         #div1{text-align: center;background-color: #f0fbff;margin-left: 400px;margin-right: 400px;background-image: url(3.png);}
         #img1{border-radius: 100px;}
         button{width: 200px;border-radius: 50px;height: 50px;}
